--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "zone.js": "0.6.6"
   },
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "grunt": "^0.4.5",
-    "grunt-browserify": "^5.0.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-test": "^0.12.7",
     "grunt-sass": "^1.1.0",
-    "mocha": "^2.4.5"
+    "grunt-webpack": "^1.0.11",
+    "mocha": "^2.4.5",
+    "webpack": "^1.13.1"
   }
 }
